# img_server

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  README.md
include/: request_handler_factory.h  server.h
include/handlers/: not_found_handler.h  recieve_image.h  set_text.h
poco/lib/: libPocoEncodings.so.92  libPocoJWT.so.92  libPocoPrometheus.so.92
src/: CMakeLists.txt  main.cpp  request_handler_factory.cpp  server.cpp
src/handlers/: CMakeLists.txt  not_found_handler.cpp  recieve_image.cpp  set_text.cpp
